# VTimeline

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build.sh  convert.py  pyproject.toml  query.py  readme.md  tracepoint.py  vtimeline.cpp
examples/: overlap.py
patch/: pytorch_ncclgroup_streams.patch
src/vtimeline/: __init__.py  megatron_collector.py  tracepoint.py  trition_marker_gen.sh  triton_marker.py  triton_marker_gen.sh
